RESOLVED FIXED230487
[LFC][IFC] Incorrect surrogate handling when dealing with short lines
https://bugs.webkit.org/show_bug.cgi?id=230487
Summary [LFC][IFC] Incorrect surrogate handling when dealing with short lines
alan
Reported 2021-09-20 10:36:25 PDT
when even the first glyph does not fit.
Attachments
Patch (3.71 KB, patch)
2021-09-20 10:43 PDT, alan
no flags
alan
Comment 1 2021-09-20 10:43:56 PDT
Antti Koivisto
Comment 2 2021-09-20 10:52:33 PDT
□ □
EWS
Comment 3 2021-09-20 13:58:11 PDT
Committed r282779 (241914@main): <https://commits.webkit.org/241914@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 438695 [details].
Radar WebKit Bug Importer
Comment 4 2021-09-20 13:59:20 PDT
Note You need to log in before you can comment on or make changes to this bug.